--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:backend": "cd backend && npm run build",
+    "build:all": "npm run build:backend && npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
