--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,19 @@
 # Dependencies
 node_modules/
+dist
+dist-ssr
+*.local
 
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 # Environment variables
 .env
 
